--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	    <nav class="top-navigation">
+        <div class="content">
+    	<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px" style=" margin-left: 14px; height: 70px;">
+</div>
+    </nav>
 </body>
 </html>
