--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <body>
 	    <nav class="top-navigation">
         <div class="content">
-    	<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px" style=" margin-left: 14px; height: 70px;">
+    	<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px" style="height: 70px;">
+    	<ul class="links">
+    		<li>Meet Karma</li>
+    		<li>How It works</li>
+    		<li>Store</li>
+    		<li>Blog</li>
+    		<li>Help</li>
+    		<li>Log in</li>
+		</ul>
 </div>
     </nav>
 </body>
