--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Karma</title>
 	<link rel="stylesheet" href="css/style.css">
-</head>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 <body>
 	    <nav class="top-navigation">
         <div class="content">
-    	<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px" style="height: 70px;">
     	<ul class="links">
     		<li>Meet Karma</li>
     		<li>How It works</li>
@@ -17,6 +16,7 @@
     		<li>Help</li>
     		<li>Log in</li>
 		</ul>
+		<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px" style="height: 70px;">
 </div>
     </nav>
 </body>
