--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
     		<li>Log in</li>
 		</ul>
 		<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px" style="height: 70px;">
-</div>
-    </nav>
+    	</nav>
+    	<section class="introduction">
+        	<div class="content">
+            	<h1>Introducing Karma</h1>
+            	<h3>Bring WiFi with you, everywhere you go.</h3>
+            	<div class="buttons">
+                	<button>Learn More</button>
+            </div>
 </body>
 </html>
